# KnowledgeHub

./: .dockerignore  .env.example  .gitignore  CODEX_BUILD_MCP_TAILSCALE_LAN_10.249.44.27.zh-CN.md  CODEX_BUILD_ZOTERO_RAG_DUAL_3090.zh-CN.md  README.md  pyproject.toml  writing-material-functional-test-report.md
configs/: default.yaml  knowledgehub.yaml  writing_materials.yaml
configs/evaluation/: offline.yaml  v2.yaml
configs/projects/: real-project-pilot.example.yaml
configs/rag/: default.yaml  dual_3090.yaml  single_3090.yaml
configs/sources/: code.yaml  zotero.yaml
configs/writing/: taxonomy-v1.yaml
constraints/: mcp-py312.txt
deploy/gpu/: compose.yaml
deploy/logrotate/: knowledgehub-mcp
deploy/qdrant/: compose.yaml
deploy/services/: Dockerfile
deploy/systemd/: knowledgehub-mcp-lan-preflight  knowledgehub-mcp-lan.service  knowledgehub-mcp-tailscale.service  knowledgehub-rag-core.service  knowledgehub-rag-embed-dual.service  knowledgehub-rag-incremental-run  knowledgehub-rag-incremental-with-retries  knowledgehub-rag-online.service  knowledgehub-rag-search-api.service  knowledgehub-zotero-cache-refresh.service  knowledgehub-zotero-rag-incremental.service  knowledgehub-zotero-rag-incremental.timer  knowledgehub-zotero-search.service  knowledgehub-zotero-sync.service  knowledgehub-zotero-sync.timer  mcp-common.env.example  mcp-lan.env.example  mcp-tailscale.env.example
deploy/tailscale/: configure-serve.sh  grants-fragment.hujson
deploy/ufw/: knowledgehub-mcp-ufw.sh
docs/: MCP_IMPLEMENTATION_REPORT.zh-CN.md  MULTI_RAG_IMPLEMENTATION_REPORT.md  V2_EVALUATION_ROUND_REPORT.md  V2_FINAL_REPORT.md  V2_FIRST_ROUND_REPORT.md  V2_FOURTH_ROUND_REPORT.md  V2_INTEGRATION_ROUND_REPORT.md  V2_PATCH_1_REPORT.md  V2_PATCH_2_REPORT.md  V2_PATCH_3_REPORT.md  V2_PATCH_4_REPORT.md  V2_PATCH_5_REPORT.md  V2_PATCH_6_REPORT.md  V2_SECOND_ROUND_REPORT.md  V2_THIRD_ROUND_REPORT.md  architecture_review.md  code_rag.md  code_symbol_index.md  data_sources.md  evaluation.md  manifests.md  multi_rag_extension_design.md  repository_adaptation.md  skill_integration.md  v1_baseline.md  v1_gap_analysis.md  v2_architecture.md  v2_migration.md  v2_release.md  v3_fixture_architecture_review.md  version_diff.md  writing_material_extraction_followup_plan.md  writing_material_extraction_implementation_audit.md  writing_material_pilot_runbook.md  writing_material_provenance_compatibility.md  writing_material_release_runbook.md  writing_material_retention_runbook.md  writing_rag.md  writing_rag_v2.md
docs/design/: LEGACY_ZOTERO_RAG_GAP_ANALYSIS.md  MCP_THREAT_MODEL.md  ZOTERO_WRITING_MATERIAL_PIPELINE.zh-CN.md
docs/guides/: BUILD_ZOTERO_RAG_DUAL_3090.zh-CN.md  CONNECT_KNOWLEDGEHUB_MCP.zh-CN.md  CONTROLLED_PILOT_DATA_DRIVEN_MAINTENANCE.zh-CN.md  REAL_PROJECT_PILOT.zh-CN.md
docs/reference/: MCP_TOOLS.zh-CN.md
docs/sources/: zotero.md
eval/code/: api_usage.jsonl  compatibility.jsonl  debugging.jsonl  repository_adaptation.jsonl  source_navigation.jsonl
eval/writing/: function_classification.jsonl  paragraph_structure.jsonl  pattern_retrieval.jsonl  section_classification.jsonl  similarity_risk.jsonl  venue_style.jsonl
fixtures/v3/fixture_vision_project/: README.md  pyproject.toml
fixtures/v3/fixture_vision_project/configs/: baseline.yaml  failure_fix.yaml  failure_nan.yaml  fusion_add.yaml  fusion_concat.yaml
fixtures/v3/fixture_vision_project/knowledge/: code.jsonl  literature.jsonl  writing.jsonl
fixtures/v3/fixture_vision_project/src/fixture_vision/: __init__.py  data.py  evaluate.py  fusion.py  metrics.py  model.py  train.py
fixtures/v3/fixture_vision_project/tests/: test_fixture.py
migrations/: v1_to_v2.py
reports/v2_validation/: code_live_43.json  code_retrieval_evaluation.md  code_sync_validation.md  commands.md  failures.jsonl  final_report.md  fixes.md  index_baseline.json  literature_regression.md  multi_version_validation.md  p1_atomic_index_remediation.md  performance_baseline.md  remaining_risk_remediation.md  repository_state.md  runtime_environment.json  service_validation.md  snapshot_rollback_validation.md  symbol_index_validation.md  test_baseline.md  version_diff_validation.md  writing_rag_validation.md
reports/v3_fixture/: architecture_review.md  cross_rag_validation.md  (+12 more)
scripts/: benchmark_rag_gpus.py  bootstrap_zotero_rag.sh  inspect_rag_environment.py  run_v3_fixture.py
tests/: conftest.py
(+227 files in other folders)
