[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgehub"
version = "0.1.0"
description = "Unified, incremental data sources for KnowledgeHub RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "KnowledgeHub maintainers" }]
dependencies = [
  "httpx>=0.25,<1",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8,<2",
  "pytest>=7.4,<9",
  "pytest-cov>=4.1,<7",
  "ruff>=0.4,<1",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
knowledgehub = "knowledgehub.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["knowledgehub"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "knowledgehub.sources.zotero.attachments"
disable_error_code = ["arg-type", "no-untyped-def", "unused-ignore"]
