[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgehub"
version = "0.2.6"
description = "Unified, incremental data sources for KnowledgeHub RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "KnowledgeHub maintainers" }]
dependencies = [
  "httpx>=0.25,<1",
  "packaging>=23,<27",
  "PyYAML>=6,<7",
  "tomli>=2,<3; python_version < '3.11'",
]

[project.optional-dependencies]
rag = [
  "docling>=2.112,<3",
  "fastapi>=0.139,<1",
  "fastembed>=0.8,<1",
  "numpy>=2.0,<3",
  "pyarrow>=25,<26",
  "PyMuPDF>=1.26,<2",
  "qdrant-client>=1.18,<2",
  "transformers>=5.13,<6",
  "uvicorn>=0.51,<1",
]
mcp = [
  "mcp==1.28.1",
]
dev = [
  "mypy>=1.8,<2",
  "pytest>=7.4,<9",
  "pytest-cov>=4.1,<7",
  "ruff>=0.4,<1",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
knowledgehub = "knowledgehub.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: tests requiring external services",
  "gpu: tests requiring one CUDA GPU",
  "dual_gpu: tests requiring two CUDA GPUs",
  "manual: bounded tests run only by explicit operator action",
]

[tool.coverage.run]
branch = true
source = ["knowledgehub"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "knowledgehub.sources.zotero.attachments"
disable_error_code = ["arg-type", "no-untyped-def", "unused-ignore"]

[[tool.mypy.overrides]]
module = [
  "docling.*",
  "docling_core.*",
  "fastembed.*",
  "fitz.*",
  "pymupdf.*",
  "pyarrow.*",
  "qdrant_client.*",
  "torch.*",
  "transformers.*",
  "uvicorn.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true
