[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fixture-vision-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24,<3", "PyYAML>=6,<7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
